<resources>
    <string name="app_name">Moody-an</string>
    <string name="nama">Nama</string>
    <string name="desk_perasaan">Deskripsi perasaan</string>
    <string name="cek">Cek</string>
    <string name="persenan">Persentase perasaan(%)</string>
    <string name="date">Date</string>
    <string name="senang">Senang</string>
    <string-array name="list_perasaan">
        <item>Default</item>
        <item>Senang</item>
        <item>Sedih</item>
        <item>Marah</item>
        <item>Netral</item>
        <item>Terhibur</item>
    </string-array>

</resources>